fonctions avancees/sans Integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,15 @@ server.port=8082
 
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
+
+# Configurer les informations SMTP pour l'envoi d'e-mails
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=alaa.hamdi@esprit.tn     
+spring.mail.password=Azerty123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
